<resources>
    <string name="app_name">GlamARtist</string>
    <string name="makeup">Makeup</string>
    <string name="glasses">Glasses</string>
    <string name="yellowSunglasses">Yellow Sunglasses</string>
    <string name="sunglasses">Sunglasses</string>
    <string name="lipstick">Lipstick</string>
    <string name="blush">Blush</string>
    <string name="liner">Liner</string>
    <string name="marioHat">Mario Hat</string>
    <string name="change_color">Change color</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="draw">Draw</string>
    <string name="stamp">Stamp</string>
    <string name="image">Image</string>
    <string name="text">Text</string>
    <string name="logIn">Log In</string>
    <string name="singUp">Sing Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcomeBack">Welcome Back!</string>
    <string name="enterLogIn">Enter Your Username and Password</string>
    <string name="or">or</string>
    <string name="newAccount"><u>Create a New Account</u></string>
    <string name="return_to_main_window">Return to main window</string>
    <string name="createAccount">Create Account</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="logOut">Log Out</string>
    <string name="backToEditor">Back To Editor</string>
    <string name="hello">Hello,</string>
    <string name="accessories">Accessories</string>
    <string name="looks">Looks</string>
    <string name="mascara">Mascara</string>
    <string name="hats">Hats</string>
    <string name="earrings">Earrings</string>
    <string name="piercing">Piercing</string>
    <string name="option">Option</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="timer">00:00:00</string>
    <string name="make_it_public">Make it public?</string>
    <string name="look_name">Look name</string>
    <string name="save">Save</string>
    <string name="save_look">Save look?</string>
    <string name="discard">Discard all changes?</string>
    <string name="discard_button">Discard</string>
    <string name="apply">Apply</string>
    <string name="look_changes">Applying a look will erase all unsaved changes</string>
    <string name="continue_button">Continue</string>
    <string name="my_looks">Only my looks</string>
    <string name="clean_all">Clean All</string>
    <string name="clear_all">Clear All</string>
    <string name="fill">Fill</string>
    <string name="ok">Ok</string>
    <string name="move">Move</string>
    <string name="move_element_to_layer">Move element to layer:</string>
    <string name="delete">Delete</string>
    <string name="delete_layer_this_action_cannot_be_undone">Delete layer? This action cannot be undone</string>
    <string name="show_face_grid">Show face grid?</string>
    <string name="upload_image_or_gif">Upload image (.png) or GIF</string>
    <string name="this_look_is_created_by">This look is created by</string>
    <string name="delete_the_look">Delete the look?</string>
    <string name="grid">Grid</string>
</resources>
