<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/first_line_buttons"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/blush"
        android:textAllCaps="false" />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorLightGrey" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/lipstick"
        android:textAllCaps="false" />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorLightGrey" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/liner"
        android:textAllCaps="false" />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorLightGrey" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/mascara"
        android:textAllCaps="false" />
</LinearLayout>