<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MakeupActivity">

    <fragment
        android:id="@+id/face_fragment"
        android:name="cz.cvut.arfittingroom.fragment.FaceArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical">

        <!-- First row of buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_liner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liner" />

            <Button
                android:id="@+id/button_blush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blush" />

            <Button
                android:id="@+id/button_lipstick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lipstick" />
        </LinearLayout>

        <!-- Second row of buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_sunglasses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunglasses" />

            <Button
                android:id="@+id/button_yellow_sunglasses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellowSunglasses" />

            <Button
                android:id="@+id/button_mario_hat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marioHat" />


        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/button_3d_editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:background="@null"
        android:src="@drawable/editor_icon" />
</FrameLayout>
