<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_look"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/look_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/look_name"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/colorMediumGrey"
        android:textColorHint="@color/colorMediumGrey"
        android:paddingTop="10dp"/>

    <CheckBox
        android:id="@+id/is_public_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/make_it_public"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_popup_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/small_button"
            android:text="@string/cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/save_look_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/small_button"
            android:backgroundTint="@color/colorActive"
            android:text="@string/save"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>
