<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ShowRoomActivity">

    <FrameLayout
        android:id="@+id/arFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical">

        <!-- First row of buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_liner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liner" />

            <Button
                android:id="@+id/button_blush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blush" />

            <Button
                android:id="@+id/button_lipstick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lipstick" />
        </LinearLayout>

        <!-- Second row of buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_sunglasses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunglasses" />

            <Button
                android:id="@+id/button_yellow_sunglasses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellowSunglasses" />

            <Button
                android:id="@+id/button_mario_hat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marioHat" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

    <ImageButton
        android:id="@+id/button_3d_editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/editor_icon"
        app:layout_constraintEnd_toStartOf="@+id/button_makeup_editor"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Button for Makeup Editor -->
    <ImageButton
        android:id="@+id/button_makeup_editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/makeup_editor_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_3d_editor"
        app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</FrameLayout>
