<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_window_background">

    <Button
        android:id="@+id/back_to_editor_button"
        style="@style/LongButtonStyle"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/backToEditor"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/log_out_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.5"
    app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/log_out_button"
        style="@style/LongButtonStyle"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/logOut"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/back_to_editor_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <LinearLayout
        android:id="@+id/text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorBlue"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorBlue"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
